--- a/src/App.css
+++ b/src/App.css
@@ -13,3 +13,25 @@
   max-width: 320px;
   margin: auto;
 }
+
+.timer {
+  border: 1px solid #3e3e3e;
+  border-radius: 4px;
+  padding: 16px;
+  max-width: 320px;
+  margin: auto;
+  margin-bottom: 8px;
+}
+
+.timer label {
+  display: block;
+  text-align: left;
+}
+
+.timer input {
+  display: block;
+  width: 100%;
+  height: 30px;
+  margin-top: 8px;
+  margin-bottom: 8px;
+}
