--- a/src/App.css
+++ b/src/App.css
@@ -13,19 +13,47 @@
   max-width: 320px;
   margin: auto;
 }
-
+html {
+  margin: 0;
+  min-height: 100%;
+}
+body {
+  color: rgb(13, 13, 14);
+}
+.img {
+  background-image: linear-gradient(
+      to bottom,
+      transparent 30%,
+      rgb(77, 74, 74) 100%
+    ),
+    url(./media/backImg.jpg);
+  background-size: cover;
+  position: fixed;
+  z-index: -1;
+  top: 0%;
+  left: 0%;
+  width: 100%;
+  height: 100%;
+}
+h1 {
+  margin-top: 20px;
+}
 .timer {
   border: 1px solid #3e3e3e;
-  border-radius: 4px;
+  border-radius: 20px;
   padding: 16px;
   max-width: 320px;
   margin: auto;
   margin-bottom: 8px;
+  height: 230px;
+  background-color: rgba(255, 255, 255, 0.1);
+  backdrop-filter: blur(5px);
 }
 
 .timer label {
   display: block;
   text-align: left;
+  font: italic small-caps 20px Arial, Helvetica, sans-serif;
 }
 
 .timer input {
@@ -33,5 +61,42 @@
   width: 100%;
   height: 30px;
   margin-top: 8px;
-  margin-bottom: 8px;
+  margin-bottom: 16px;
+}
+.timerContainer {
+  position: relative;
+  margin: 10px;
+}
+.timer .title {
+  position: absolute;
+  top: 17px;
+  display: block;
+  text-align: left;
+  font: small-caps bold 25px Arial, Helvetica, sans-serif;
+}
+.timer .project {
+  position: absolute;
+  top: 47px;
+  display: block;
+  text-align: left;
+  font: italic small-caps 15px Arial, Helvetica, sans-serif;
+}
+.timer .timeEslapsed {
+  margin-top: 50px;
+  display: block;
+  font: italic small-caps 40px Arial, Helvetica, sans-serif;
+}
+Button {
+  margin: 5px;
+  margin-left: 22px;
+  margin-right: 22px;
+}
+#SS {
+  width: 82.8%;
+}
+.buttonContainer {
+  margin-top: 10px;
+}
+Button:hover {
+  font-weight: bold;
 }
