--- a/src/App.css
+++ b/src/App.css
@@ -19,6 +19,7 @@ html {
 }
 body {
   color: rgb(13, 13, 14);
+  overflow-y: scroll;
 }
 .img {
   background-image: linear-gradient(
@@ -39,7 +40,6 @@ h1 {
   margin-top: 20px;
 }
 .timer {
-  border: 1px solid #3e3e3e;
   border-radius: 20px;
   padding: 16px;
   max-width: 320px;
@@ -48,6 +48,7 @@ h1 {
   height: 230px;
   background-color: rgba(255, 255, 255, 0.1);
   backdrop-filter: blur(5px);
+  box-shadow: 0px 5px 24px rgba(87, 87, 87, 0.2);
 }
 
 .timer label {
@@ -95,6 +96,7 @@ Button {
   width: 82.8%;
 }
 .buttonContainer {
+  text-align: center;
   margin-top: 10px;
 }
 Button:hover {
