--- a/src/App.css
+++ b/src/App.css
@@ -20,8 +20,7 @@ html {
 body {
   color: rgb(13, 13, 14);
   overflow-y: scroll;
-}
-.img {
+  overflow-x: hidden;
   background-image: linear-gradient(
       to bottom,
       transparent 30%,
@@ -29,12 +28,8 @@ body {
     ),
     url(./media/backImg.jpg);
   background-size: cover;
-  position: fixed;
-  z-index: -1;
-  top: 0%;
-  left: 0%;
-  width: 100%;
-  height: 100%;
+  background-position: center;
+  background-attachment: fixed;
 }
 h1 {
   margin-top: 20px;
@@ -70,19 +65,20 @@ h1 {
 }
 .timer .title {
   position: absolute;
-  top: 17px;
+  top: 14px;
   display: block;
   text-align: left;
   font: small-caps bold 25px Arial, Helvetica, sans-serif;
 }
 .timer .project {
   position: absolute;
-  top: 47px;
+  top: 43px;
   display: block;
   text-align: left;
   font: italic small-caps 15px Arial, Helvetica, sans-serif;
 }
 .timer .timeEslapsed {
+  position: relative;
   margin-top: 50px;
   display: block;
   font: italic small-caps 40px Arial, Helvetica, sans-serif;
@@ -101,4 +97,6 @@ Button {
 }
 Button:hover {
   font-weight: bold;
+}
+.timer: {
 }
